--- a/app/templates/content/experience_content.html
+++ b/app/templates/content/experience_content.html
@@ -103,7 +103,7 @@
                         <p class="company-name">Major League Hacking</p>
                         <p class="duration">June 2025 - Present</p>
                         <p class="job-description">
-                            Learning and applying production engineering skills.
+                            Learning about production engineering and applying production engineering skills.
                         </p>
                     </div>
             </div>
