--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../static/styles/education.css">
     <link rel="stylesheet" href="../static/styles/hobbies.css">
     <link rel="stylesheet" href="../static/styles/travel.css">
+    <link rel="stylesheet" href="../static/styles/timeline.css">
     <!-- Mapbox GL JS -->
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v3.12.0/mapbox-gl.js'></script>
