--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
     <header class="top-bar">
         <div class="top-content">
             <div class="title">
-                <h1>Our Group Portfolio</h1>
+                <h1>Group Portfolio</h1>
                 <p>Say hi to the team!</p>
             </div>
             <div class="nav-bar">
