--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
         <div class="top-content">
             <div class="title">
                 <h1>Group Portfolio</h1>
-                <p>The Team</p>
+                <p>Team</p>
             </div>
             <div class="nav-bar">
                 <nav id="nav">
